# capstone_prt

./: package.xml
src/capstone_core/: package.xml  setup.py
src/capstone_core/capstone_core/: camera_node.py  comm_node.py  detection_node.py  localization_node.py  planning_node.py
src/capstone_core/launch/: full_system.launch.py
src/capstone_msgs/: CMakeLists.txt
src/capstone_msgs/msg/: Detection.msg  VehicleState.msg
