<?xml version="1.0"?>
<package format="3">
  <name>capstone_core</name>
  <version>0.0.1</version>
  <description>Core nodes for capstone project</description>
  <maintainer email=user@email.com>user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>capstone_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
